fixed animated text bug on safari

--- a/dev/src/styles.scss
+++ b/dev/src/styles.scss
@@ -362,6 +362,7 @@ main{
         font-weight: 700;
         line-height: 93%;
         text-transform: uppercase;
+        white-space: nowrap;
         text-wrap: nowrap;
         transition: transform 0s ease;
 
